--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ Domain: [Have one / Need subdomain]</code>
                             <li>3–7 days delivery</li>
                             <li>Unlimited updates</li>
                         </ul>
-                        <a href="#" class="btn btn-outline" style="width: 100%;">Select Plan</a>
+                        <a href="" class="btn btn-outline" style="width: 100%;">Current Plan</a>
                     </div>
                     <div class="price-card featured">
                         <h3>💎 VIP Plan</h3>
@@ -474,7 +474,7 @@ Domain: [Have one / Need subdomain]</code>
                             <li>Priority Support</li>
                             <li>20% off first month</li>
                         </ul>
-                        <a href="#" class="btn btn-primary" style="width: 100%;">Get VIP Access</a>
+                        <a href="https://discord.gg/2UPxvPV5gM" class="btn btn-primary" style="width: 100%;">Get VIP Access</a>
                     </div>
                     <div class="price-card">
                         <h3>👑 Elite Plan</h3>
@@ -488,7 +488,7 @@ Domain: [Have one / Need subdomain]</code>
                             <li>Priority Support</li>
                             <li>25% off first month</li>
                         </ul>
-                        <a href="#" class="btn btn-outline" style="width: 100%;">Choose Elite</a>
+                        <a href="https://discord.gg/2UPxvPV5gM" class="btn btn-outline" style="width: 100%;">Choose Elite</a>
                     </div>
                 </div>
             </div>
